--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "strict": true,
         "strictNullChecks": false,
         "moduleResolution": "Node",
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "esModuleInterop": true,
     },
     "include": [
         "src/**/*",
