Revert "Now using promises"
This reverts commit 308767eb970e980c179014db8dcfeb93c96f703f.

--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
   ],
   "author": "Kisakay & Sown",
   "dependencies": {
-    "@types/write-file-atomic": "^4.0.3",
-    "steggy-noencrypt": "^2.0.3",
-    "write-file-atomic": "^5.0.1"
+    "steggy-noencrypt": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
