--- a/package.json
+++ b/package.json
@@ -32,5 +32,6 @@
   "bugs": {
     "url": "https://github.com/ihrz/SteganoDB/issues"
   },
-  "homepage": "https://github.com/ihrz/SteganoDB#readme"
+  "homepage": "https://github.com/ihrz/SteganoDB#readme",
+  "license": "MIT"
 }
