--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "steggy-noencrypt": "^2.0.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.4.1",
     "tslib": "^2.6.3",
     "typescript": "^5.5.4"
