--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "author": "Kisakay",
   "dependencies": {
+    "smol-toml": "^1.3.1",
     "steggy-noencrypt": "^2.0.3"
   },
   "devDependencies": {
